--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#!bash
 #dir/   忽略目录下所有内容
 #dir/*/ 忽略目录下所有文件夹 但是不忽略本目录下的一级文件
 #凡是提交过的文件 自动不受.gitignore的限制
@@ -6,6 +7,8 @@
 #如同时忽略 dir/en2/ /dir/ !dir/dir3 则整个dir/仍然会被忽略-已经提交文件除外
 backup/
 bundle/
+# !bundle/systemverilog.vim/ftdetct/systemverilog.vim
+# !bunle/std_c.zip/syntax/c.vim
 colors/
 plugin/
 ftdetct/
@@ -20,5 +23,4 @@ tags-cn
 tags-te
 *~
 *.bak
-
 
